--- a/src/App.css
+++ b/src/App.css
@@ -24,13 +24,16 @@ input[type='number'] {
     font-size: 0.9rem;
     border: 1px solid var(--neutral-200);
     border-radius: 4px;
-    outline: none;
-    transition: border-color 120ms ease;
+    outline: 1px solid transparent;
+    outline-offset: 0;
+    transition: border-color 120ms ease-in, outline-color 120ms ease-in, outline-offset 120ms ease-in;
 }
 
 input[type='text']:focus,
 input[type='number']:focus {
     border-color: hsl(207, 73%, 57%);
+    outline-color: hsl(207, 73%, 57%);
+    outline-offset: 0.2px;
 }
 
 .select {
